--- a/styling.css
+++ b/styling.css
@@ -223,6 +223,9 @@ p.copy_{
       display:block;
       
       margin-left: 40px;
+      float:right;
+      height: 1000px;
+      width: 400px;
 
 
     }
